--- a/main.html
+++ b/main.html
@@ -8,9 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
 	<p id="yellow" style="background-color:yellow">Paragragh-1</p>
 	<p id="red" style="background-color:red">Paragragh-2</p>
 	<p id="green" style="background-color:green">Paragragh-3</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
